コード修正

--- a/codes/test_colab.ipynb
+++ b/codes/test_colab.ipynb
@@ -28,11 +28,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "jzVcWCl-ou6c",
+        "colab_type": "code",
+        "outputId": "f2aa8281-c1c3-4d4f-977d-3226c215cb58",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "#GPU処理になっているかの確認\n",
+        "import tensorflow as tf\n",
+        "tf.test.gpu_device_name()"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/device:GPU:0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "9-2fw-n0Mm7l",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "#googledriveAPIとpythonを連携する PyDriveをcolab上にインストール\n",
+        "# ! をつかうとコマンドが使える\n",
+        "\n",
         "!pip install -U -q PyDrive"
       ],
       "execution_count": 0,
@@ -46,24 +81,17 @@
         "colab": {}
       },
       "source": [
+        "#ログインしているアカウントとgoogleドライブを連携する\n",
+        "\n",
         "from pydrive.auth import GoogleAuth\n",
         "from pydrive.drive import GoogleDrive\n",
         "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jzVcWCl-ou6c",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import tensorflow as tf\n",
-        "tf.test.gpu_device_name()"
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -76,24 +104,9 @@
         "colab": {}
       },
       "source": [
+        "#ローカルからアップロードするとき用いる\n",
         "# from google.colab import files\n",
         "# uploaded = files.upload()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-C6O76XcMul-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "auth.authenticate_user()\n",
-        "gauth = GoogleAuth()\n",
-        "gauth.credentials = GoogleCredentials.get_application_default()\n",
-        "drive = GoogleDrive(gauth)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -106,9 +119,28 @@
         "colab": {}
       },
       "source": [
+        "#犬猫写真データをドライブからもってくる\n",
+        "\n",
         "id = '1YacZJ9yYDmwew_FivQIrHBNowC9nSfDR'  # 共有リンクで取得した id= より後の部分\n",
         "downloaded = drive.CreateFile({'id': id})\n",
         "downloaded.GetContentFile('dogs-vs-cats-redux-kernels-edition.zip')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0yWJEQ71LZcj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#学習済み重みをドライブからもってくる\n",
+        "\n",
+        "id = '1O05JOK_gxOu2iipU8S4RQv0oeINrnn4B'  # 共有リンクで取得した id= より後の部分\n",
+        "downloaded = drive.CreateFile({'id': id})\n",
+        "downloaded.GetContentFile('weights.zip')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -134,7 +166,8 @@
         "colab": {}
       },
       "source": [
-        "!unzip test.zip"
+        "!unzip test.zip\n",
+        "!unzip train.zip"
       ],
       "execution_count": 0,
       "outputs": []
@@ -147,7 +180,7 @@
         "colab": {}
       },
       "source": [
-        "!unzip train.zip"
+        "!unzip weights.zip"
       ],
       "execution_count": 0,
       "outputs": []
@@ -160,6 +193,10 @@
         "colab": {}
       },
       "source": [
+        "#全ての犬猫写真データから1000枚と400枚抜き出す\n",
+        "#この1000枚を訓練データとする\n",
+        "#400枚を検証データとする\n",
+        "\n",
         "import os\n",
         "source_dir = \"./train\"\n",
         "train_dir = \"./data/train\"\n",
@@ -218,7 +255,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **学習** keras mnist"
+        "# Mnist 分類器の作成"
       ]
     },
     {
@@ -257,6 +294,7 @@
         "colab": {}
       },
       "source": [
+        "#ハイパパラメータたち\n",
         "INPUT_SHAPE = (1, 28, 28)\n",
         "CLASSES_NUM = 10\n",
         "EPOCH_NUM = 10\n",
@@ -274,6 +312,7 @@
         "colab": {}
       },
       "source": [
+        "#モデル\n",
         "model = Sequential()\n",
         "\n",
         "model.add(Conv2D(filters=20, kernel_size=5, padding='same',input_shape=INPUT_SHAPE))\n",
@@ -306,6 +345,8 @@
         "outputId": "6b3df2cb-1985-45a1-f7ee-12e7c69f82b7"
       },
       "source": [
+        "#mnistのロードと画素の正規化\n",
+        "\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "\n",
         "x_train = x_train.astype('float32')\n",
@@ -333,6 +374,8 @@
         "colab": {}
       },
       "source": [
+        "#cnnに入れられるよう軸を増やす\n",
+        "\n",
         "x_train = x_train[:, np.newaxis, :, :]\n",
         "x_test = x_test[:, np.newaxis, :, :]\n",
         "\n",
@@ -357,8 +400,10 @@
         "outputId": "7d9aa7b6-052c-49fb-f2ad-b37ab8e5901d"
       },
       "source": [
+        "#モデルのコンパイルと学習\n",
         "model.compile(\n",
         "    loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "\n",
         "#verbose...データをどこまでログに出すか\n",
         "#validation_split 検証データの割合\n",
         "history = model.fit(\n",
@@ -413,7 +458,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#**学習**  犬猫分類器の作成\n",
+        "#犬猫分類器の作成\n",
         "\n"
       ]
     },
